kubernetes/full-stack/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: minio
    - protocol: TCP
      port: 9001
      targetPort: 9001
      name: console
