kubernetes/full-stack/minio/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dashboard
spec:
  tls:
    - hosts:
      - sc-minio-dashboard.byo.one
      secretName: sc-minio.byo.one-tls
  rules:
  - host: sc-minio-dashboard.byo.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
